--- a/configuration/configuration.json
+++ b/configuration/configuration.json
@@ -1,20 +1,35 @@
 {
-    "flows": {
-      "flows-per-node": "2",
-        "nodes": [
-          "11.0.0.2",
-          "12.0.0.2",
-          "13.0.0.2",
-          "14.0.0.2",
-          "15.0.0.2",
-          "16.0.0.2",
-          "17.0.0.2",
-          "18.0.0.2"
-        ],
-        "protocols": [
-          "UDP",
-          "TCP"
-        ]
+      "flows": {
+		  "flows-per-node": "2",
+		  "wire-type": "wired",
+		  "initial-port": "12000",
+		  "outgoing-patterns": [
+				{
+					"relative-node": "-1",
+					"relative-port": "0",
+					"protocol": "TCP"
+				},
+				{
+					"relative-node": "1",
+					"relative-port": "1",
+					"protocol": "TCP"
+				},
+				{
+					"relative-node": "2",
+					"relative-port": "2",
+					"protocol": "TCP"
+				}
+			  ],
+			"nodes": [
+			  "11.0.0.2",
+			  "12.0.0.2",
+			  "13.0.0.2",
+			  "14.0.0.2",
+			  "15.0.0.2",
+			  "16.0.0.2",
+			  "17.0.0.2",
+			  "18.0.0.2"
+			]
     },
     "parallel-executions": "1",
     "show-gui": "false",
