--- a/configuration/configuration.json
+++ b/configuration/configuration.json
@@ -1,7 +1,7 @@
 {
       "flows": {
 		  "flows-per-node": "2",
-		  "wire-type": "wired",
+		  "wire-type": "wireless",
 		  "initial-port": "12000",
 		  "outgoing-patterns": [
 				{
@@ -20,16 +20,8 @@
 					"protocol": "TCP"
 				}
 			  ],
-			"nodes": [
-			  "11.0.0.2",
-			  "12.0.0.2",
-			  "13.0.0.2",
-			  "14.0.0.2",
-			  "15.0.0.2",
-			  "16.0.0.2",
-			  "17.0.0.2",
-			  "18.0.0.2"
-			]
+		  "ip-format": "10.0.0.X",
+	 	  "nodes-num": "10"
     },
     "parallel-executions": "1",
     "show-gui": "false",
