--- a/configuration/configuration.json
+++ b/configuration/configuration.json
@@ -2,13 +2,18 @@
     "flows": {
 	    "wire-type": "wireless",
     	    "initial-port": "12000",
-	    "protocol": "TCP",
+	    "protocol": "UDP",
             "traffic-nodes": [
-              "13.0.0.1",
-              "14.0.0.1",
-              "15.0.0.1",
-              "16.0.0.1",
-              "17.0.0.1"
+              "11.0.0.2",
+              "12.0.0.2",
+              "13.0.0.2",
+              "14.0.0.2",
+              "15.0.0.2",
+              "16.0.0.2",
+              "17.0.0.2",
+              "18.0.0.2",
+              "19.0.0.2",
+              "20.0.0.2"
             ]
     },
     "parallel-executions": "1",
